--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,3 +1,24 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+html,
+body,
+.app {
+  width: 100%;
+}
+
+.container {
+  background-color: #444;
+}
