--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -11,3 +11,19 @@
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background: #5046e5;
 }
+
+html,
+body,
+#app {
+  width: 100%;
+  height: 100%;
+}
+
+.scrollbar-hidden {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
